force-app/main/default/objects/UserMapping__mdt/UserMapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps user fields - Country, Organization, Assignment - to Public Groups to enable UI-based access to Price books.</description>
    <label>User Mapping Meta</label>
    <pluralLabel>User Mappings Meta</pluralLabel>
</CustomObject>