force-app/main/default/objects/UserMapping__mdt/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
                <default>true</default>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>