force-app/main/default/objects/UserMapping__mdt/fields/Case_Handling_Group__c.field-meta.xml
<CustomField>
    <fullName>Case_Handling_Group__c</fullName>
    <label>Case Handling Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>