force-app/main/default/objects/UserMapping__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country Code of the User.</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>