force-app/main/default/objects/UserMapping__mdt/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Defines an additional specific assignment for a User, in addition to their Role, Org and Profit Center</description>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>