force-app/main/default/objects/UserMapping__mdt/fields/Organization_Code__c.field-meta.xml
<CustomField>
    <fullName>Organization_Code__c</fullName>
    <label>Organization Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>