force-app/main/default/objects/UserMapping__mdt/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Organization Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>