force-app/main/default/objects/UserMapping__mdt/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <description>Business Unit of the User.</description>
    <label>Profit Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>