force-app/main/default/objects/UserMapping__mdt/fields/Profit_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Code__c</fullName>
    <label>Profit Center Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>