force-app/main/default/objects/UserMapping__mdt/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <description>Lists the Public Groups the User shall have access to. Different Public Groups are separated by semicolon.</description>
    <label>Public Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>