force-app/main/default/objects/UserMapping__mdt/fields/Sales_User_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_User_Group__c</fullName>
    <label>Sales User Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>