force-app/main/default/objects/UserMapping__mdt/fields/Specific_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Specific_Assignment__c</fullName>
    <description>Defines an additional specific assignment for a User, in addition to their Country and Division figures.</description>
    <label>Specific Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>