force-app/main/default/objects/UserMapping__mdt/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Organization__c</columns>
    <columns>Organization_Code__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Profit_Center__c</columns>
    <columns>Profit_Center_Code__c</columns>
    <columns>Profit_Center_Name__c</columns>
    <columns>Public_Group__c</columns>
    <columns>Country__c</columns>
    <columns>Country_Code__c</columns>
    <columns>District__c</columns>
    <columns>Business__c</columns>
    <columns>Sales_User_Group__c</columns>
    <columns>Specific_Assignment__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
    <language>en_US</language>
</ListView>