force-app/main/default/objects/UserMapping__mdt/listViews/LSU.listView-meta.xml
<ListView>
    <fullName>LSU</fullName>
    <columns>MasterLabel</columns>
    <columns>Organization__c</columns>
    <columns>Organization_Code__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Profit_Center__c</columns>
    <columns>Profit_Center_Code__c</columns>
    <columns>Profit_Center_Name__c</columns>
    <columns>Public_Group__c</columns>
    <columns>Country__c</columns>
    <columns>Country_Code__c</columns>
    <columns>District__c</columns>
    <columns>Business__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization__c</field>
        <operation>equals</operation>
        <value>LSU</value>
    </filters>
    <label>LSU</label>
    <language>en_US</language>
</ListView>