force-app/main/default/objects/UserMapping__mdt/listViews/LUI.listView-meta.xml
<ListView>
    <fullName>LUI</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Business__c</columns>
    <columns>Country__c</columns>
    <columns>Country_Code__c</columns>
    <columns>District__c</columns>
    <columns>Organization__c</columns>
    <columns>Organization_Code__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Profit_Center__c</columns>
    <columns>Profit_Center_Code__c</columns>
    <columns>Profit_Center_Name__c</columns>
    <columns>Public_Group__c</columns>
    <columns>Sales_User_Group__c</columns>
    <columns>Specific_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization_Code__c</field>
        <operation>equals</operation>
        <value>144</value>
    </filters>
    <label>LUI</label>
    <language>en_US</language>
</ListView>