force-app/main/default/objects/UserMapping__mdt/listViews/UserMapping.listView-meta.xml
<ListView>
    <fullName>UserMapping</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Comments__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Organization_Code__c</columns>
    <columns>Profit_Center__c</columns>
    <columns>Profit_Center_Name__c</columns>
    <columns>Profit_Center_Code__c</columns>
    <columns>District__c</columns>
    <columns>Public_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>UserMapping</label>
    <language>en_US</language>
</ListView>